DCSA-3 DCSA smaller UI adjustments

--- a/ui/src/app/view/timestamp-editor/timestamp-editor.component.scss
+++ b/ui/src/app/view/timestamp-editor/timestamp-editor.component.scss
@@ -11,3 +11,15 @@
   text-transform: capitalize;
   font-size: 12px;
 }
+
+.ui-dropdown-label-container {
+  width: 100%;
+}
+.ui-dropdown.ui-dropdown-clearable .ui-dropdown-label {
+  text-overflow: ellipsis;
+  padding-right: 2em !important;
+}
+.p-dropdown .p-dropdown-label {
+  text-overflow: ellipsis;
+  padding-right: 1em !important;
+}
