DCSA-3 Corrected labels

--- a/ui/src/app/view/timestamp-table/timestamp-table.component.html
+++ b/ui/src/app/view/timestamp-table/timestamp-table.component.html
@@ -48,11 +48,11 @@
         <p-sortIcon field="direction"></p-sortIcon>
       </th>
       <th pSortableColumn="terminal" style="width: 14%" pTooltip="What is the name or SMDG code of the terminal?" tooltipPosition="top"
-          tooltipStyleClass="ToolTipClass">Terminal ID
+          tooltipStyleClass="ToolTipClass">Terminal Id
         <p-sortIcon field="terminal"></p-sortIcon>
       </th>
       <th pSortableColumn="locationId" pTooltip="What is the location of the timestamp, e.g. where is the vessel at sea (long/lat) or where at berth is the arrival" tooltipPosition="top"
-          tooltipStyleClass="ToolTipClass">Location ID
+          tooltipStyleClass="ToolTipClass">Berth Id
         <p-sortIcon field="locationId"></p-sortIcon>
       </th>
       <th style="width: 5%"></th>
