--- a/ui/src/app/view/vessel-editor/vessel-editor.component.html
+++ b/ui/src/app/view/vessel-editor/vessel-editor.component.html
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="p-field p-grid">
-      <label for="imo" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">IMO</label>
+      <label for="imo" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">IMO number</label>
       <div class="p-col-12 p-md-10">
         <input id="imo" type="text" formControlName="imo" pInputText [(ngModel)]=vessel.imo maxlength="7">
         <span *ngIf="vesselFormGroup.get('imo').hasError('required') && vesselFormGroup.get('imo').touched" class="p-invalid">The IMO is required</span>
@@ -19,7 +19,7 @@
       </div>
     </div>
     <div class="p-field p-grid">
-      <label for="teu" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">TEU</label>
+      <label for="teu" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Vessel size (TEU)</label>
       <div class="p-col-12 p-md-10">
         <p-inputNumber id="teu" mode="decimal" formControlName="teu" [(ngModel)]=vessel.teu></p-inputNumber>
         <span *ngIf="vesselFormGroup.get('teu').hasError('required') && vesselFormGroup.get('teu').touched" class="p-invalid">TEU is required</span>
@@ -27,7 +27,7 @@
       </div>
     </div>
     <div class="p-field p-grid">
-      <label for="serviceName" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Service name or code</label>
+      <label for="serviceName" class="p-col-12 p-mb-2 p-md-2 p-mb-md-0">Service name</label>
       <div class="p-col-12 p-md-10">
         <input id="serviceName" type="text" formControlName="serviceNameCode" pInputText [(ngModel)]=vessel.serviceNameCode>
         <span *ngIf="vesselFormGroup.get('serviceNameCode').hasError('maxlength')" class="p-invalid">Maximum length is 255</span>
