DCSA-3 Showing delay code details for selected delay code

--- a/ui/src/app/view/timestamp-comment-dialog/timestamp-comment-dialog.component.html
+++ b/ui/src/app/view/timestamp-comment-dialog/timestamp-comment-dialog.component.html
@@ -3,12 +3,23 @@
 
     <p-dropdown [options]="delayCodeOptions" [(ngModel)]="timestamp.delayCode" [filter]="true"
                 filterBy="label,value.name" [group]="false">
+      <ng-template let-delayCode pTemplate="selectedItem">
+        <div *ngIf="delayCode.value">
+          <div class="delayCodeSelected">{{delayCode.value.smdgCode}}</div>
+          <div class="delayCodeSelected delayCodeDetails">&nbsp;&middot;&nbsp;<b>{{delayCode.value.delayType}}</b></div>
+          <div class="delayCodeSelected delayCodeDetails">&nbsp;&middot;&nbsp;{{delayCode.value.name}}</div>
+          <div class="delayCodeSelected delayCodeDetails">&nbsp;&middot;&nbsp;{{delayCode.value.description}}</div>
+        </div>
+        <div *ngIf="!delayCode.value">
+          <div>{{delayCode.label}}</div>
+        </div>
+      </ng-template>
       <ng-template let-delayCode pTemplate="item">
         <div *ngIf="delayCode.value">
           <div>{{delayCode.value.smdgCode}}</div>
-          <div class="delayCodeType"><b>{{delayCode.value.delayType}}</b></div>
-          <div class="delayCodeName">{{delayCode.value.name}}</div>
-          <div class="delayCodeDescription">{{delayCode.value.description}}</div>
+          <div class="delayCodeDetails"><b>{{delayCode.value.delayType}}</b></div>
+          <div class="delayCodeDetails">{{delayCode.value.name}}</div>
+          <div class="delayCodeDetails">{{delayCode.value.description}}</div>
         </div>
       </ng-template>
     </p-dropdown>
