--- a/ui/src/app/view/timestamp-comment-dialog/timestamp-comment-dialog.component.scss
+++ b/ui/src/app/view/timestamp-comment-dialog/timestamp-comment-dialog.component.scss
@@ -14,6 +14,10 @@
   font-size: 12px;
 }
 
+.delayCodeSelectedWrapper {
+  display: flex;
+  align-items: center;
+}
 .delayCodeSelected {
   float: left;
   clear: none;
